Align actionBefore styles, story improvements + misc fixes

--- a/src/components/Autocomplete/components/ListBox/components/Action/Action.scss
+++ b/src/components/Autocomplete/components/ListBox/components/Action/Action.scss
@@ -2,6 +2,7 @@
 
 .Action {
   display: flex;
+  flex: 1;
 }
 
 .Icon {
