--- a/src/components/Autocomplete/components/ListBox/components/TextOption/TextOption.scss
+++ b/src/components/Autocomplete/components/ListBox/components/TextOption/TextOption.scss
@@ -14,6 +14,11 @@
     padding: spacing(extra-tight) spacing(tight);
   }
 
+  &.isAction {
+    padding: 0;
+    margin-top: 0;
+  }
+
   &:hover {
     background-color: var(--p-surface-hovered);
   }
